--- a/goit-markup-hw-02/css/styles.css
+++ b/goit-markup-hw-02/css/styles.css
@@ -56,6 +56,8 @@ section {
   padding-top: 94px;
   padding-bottom: 94px;
 }
+/*-------------------- okno modalne ---------------------*/
+
 .background {
   position: fixed;
   width: 1600px;
@@ -63,6 +65,7 @@ section {
   background: rgba(0, 0, 0, 0.2);
   top: 0;
 }
+
 .backdrop {
   position: relative;
   width: 528px;
@@ -108,6 +111,8 @@ section {
   visibility: hidden;
   pointer-events: none;
 }
+/*-------------------- koniec okna modalnego--------------------*/
+
 .footer-div {
   display: flex;
   align-items: baseline;
@@ -478,7 +483,10 @@ section {
   color: var(--color-text);
 }
 
-.link-0:hover,
+.link-0:hover {
+  color: var(--color);
+}
+
 .link-0:focus {
   color: var(--color);
 }
