--- a/goit-markup-hw-02/css/styles.css
+++ b/goit-markup-hw-02/css/styles.css
@@ -212,7 +212,7 @@ section {
   align-items: center;
   justify-content: center;
   fill: var(--color-icone);
-  transition-property: color, border-color;
+  transition-property: fill, border-color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -239,7 +239,7 @@ section {
   height: 44px;
   fill: var(--color-icone);
   border-radius: 50%;
-  transition-property: color, background;
+  transition-property: fill, background;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -265,38 +265,39 @@ section {
 .link-nav {
   display: flex;
   gap: 46px;
-}
-.wrap-link::after {
-  color: var(--color);
-  position: absolute;
-  bottom: -33px;
-  left: 0;
-  content: "";
-  width: 100%;
-  height: 4px;
-  background: var(--color);
-  border-radius: 2px;
-}
-.wrap-nav::after {
-  color: var(--color);
-  position: absolute;
-  top: 44px;
-  left: 0;
-  content: "";
-  width: 100%;
-  height: 4px;
-  background: var(--color);
-  border-radius: 2px;
-}
+  .link {
+    position: relative;
+    text-decoration: none;
+    color: inherit;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.1;
+    letter-spacing: 0.02em;
+    transition-property: color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
-.list-mail {
-  display: flex;
-  gap: 50px;
-  margin-left: auto;
-}
+    &:hover,
+    &:focus {
+      color: var(--color);
+    }
 
-.wrap {
-  margin-left: 93px;
+    &.wrap-link,
+    &.wrap-nav {
+      color: var(--color);
+      position: relative;
+      &::after {
+        position: absolute;
+        bottom: -33px;
+        left: 0;
+        content: "";
+        width: 100%;
+        height: 4px;
+        background: var(--color);
+        border-radius: 2px;
+      }
+    }
+  }
 }
 
 .link {
@@ -312,11 +313,14 @@ section {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.link:focus {
-  color: var(--color);
+.list-mail {
+  display: flex;
+  gap: 50px;
+  margin-left: auto;
 }
-.link:hover {
-  color: var(--color);
+
+.wrap {
+  margin-left: 93px;
 }
 
 .logo {
@@ -633,24 +637,17 @@ section {
   background: var(--color-image);
   padding: 6px 22px;
   border: none;
-  transition-property: color, box-shadow;
+  transition-property: color, box-shadow, background;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.button-1:focus {
-  background-color: var(--color);
-  color: var(--color-text);
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
-  border-radius: 4px;
-}
-.button-1:hover {
-  background-color: var(--color);
-  color: var(--color-text);
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
-  border-radius: 4px;
+  &:focus,
+  &:hover {
+    background-color: var(--color);
+    color: var(--color-text);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+      0px 2px 2px rgba(0, 0, 0, 0.12);
+  }
 }
 
 .text-1 {
@@ -728,17 +725,24 @@ figure {
   display: block;
   color: inherit;
   overflow: hidden;
-  transition-property: color, box-shadow;
+  transition-property: box-shadow;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .basic-item:hover .text-basic-item {
   transform: translateY(0);
 }
+
+.basic-item:focus .text-basic-item {
+  transform: translateY(0);
+}
+
 .basic-item:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
+
 .basic-item:hover {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
